@@ -8,7 +8,4 @@ applet_LTLIBRARIES = libshowdesktop.la
 libshowdesktop_la_SOURCES = showdesktop.c
 libshowdesktop_la_LDFLAGS = -avoid-version
 
-icondir = $(datadir)/pixmaps
-dist_icon_DATA = mb-applet-showdesktop.png mb-applet-showdesktop-active.png
-
 MAINTAINERCLEANFILES = Makefile.in
